--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha"
   },
   "author": "zhenzhong",
-  "license": "ISC",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/zhenzhong/k.git"
