add some keyword in the package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "k",
-  "version": "0.9.16",
+  "version": "0.9.17",
   "description": "new web framework",
   "main": "main.js",
   "scripts": {
@@ -15,6 +15,7 @@
   "bin": {
     "k": "./lib/command.js"
   },
+  "keywords": ["framework", "koa", "web", "restful", "router", "app", "api", "model", "backend", "middleware",  "es6", "es7", "async", "await", "mysql"],
   "dependencies": {
     "commander": "^2.11.0",
     "http-errors": "^1.6.2",
