--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "k",
-  "version": "0.10.33",
+  "version": "1.0.1",
   "description": "new web framework",
   "main": "main.js",
   "scripts": {
@@ -30,7 +30,9 @@
     "es7",
     "async",
     "await",
-    "mysql"
+    "mysql",
+    "websocket",
+    "sockect.io"
   ],
   "dependencies": {
     "commander": "^2.11.0",
@@ -45,7 +47,8 @@
     "mysql2": "^1.4.2",
     "path-to-regexp": "^2.1.0",
     "twig": "^1.10.5",
-    "async": "^2.6.0"
+    "async": "^2.6.0",
+    "socket.io": "3.1.0"
   },
   "devDependencies": {
     "mocha": "^4.0.1",
